# houston

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
inc/: FreeRTOSConfig.h  common.h  config.h  encodeCommands.h  input.h  lwipopts.h  socket.h  status.h  userInput.h  wifiCtrl.h
src/: encodeCommands.c  input.c  socket.c  status.c  userInput.c  wifiCtrl.c
